# pySigma-backend-sentinelone

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
sigma/backends/sentinelone/: __init__.py  sentinelone.py
sigma/pipelines/sentinelone/: __init__.py  sentinelone.py
tests/: test_backend_sentinelone.py  test_pipelines_sentinelone.py
