[tool.poetry]
name = "sentinelone"
version = "0.1.0"
description = "pySigma pySigma-pipeline-sentinelone pipeline"
authors = ["Jake Warren <jakewarren@gmail.com>"]
license = "MIT"
repository = "https://github.com/jakewarren/sentinelone"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.8.12"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
coverage = "^7.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
